# traversability_mapping

./: .gitignore  Dockerfile  README.md  build.sh  clean_build.sh  docker-compose.yaml  launch_example.sh
.github/workflows/: build-humble-image.yml  build-jazzy-image.yml  cpp_build.yml
docker/humble/: Dockerfile  docker-compose.yaml
docker/jazzy/: Dockerfile  docker-compose.yaml
sample_programs/: block_thread.cpp  datastructure_lookup.cpp  deque_test.cpp  queue_test.cpp  set_test.cpp  vec_lookup.cpp
traversability_mapping/: CMakeLists.txt  Config.cmake.in  package.xml
traversability_mapping/include/traversability_mapping/: HashGrid.hpp  Helpers.hpp  KeyFrame.hpp  LocalMap.hpp  Parameters.hpp  PointCloudBuffer.hpp  PointCloudBufferROS.hpp  System.hpp  TraversabilityGrid.hpp
traversability_mapping/params/: traversabilityParams.yaml  traversabilityParamsORB3.yaml  traversabilityParamsOneShot.yaml  traversabilityParamsROS.yaml  virtual_boundary.csv
traversability_mapping/src/: HashGrid.cpp  Helpers.cpp  KeyFrame.cpp  LocalMap.cpp  Parameters.cpp  PointCloudBuffer.cpp  PointCloudBufferROS.cpp  System.cpp  TraversabilityGrid.cpp  main.cpp
traversability_mapping_common/: CMakeLists.txt  Config.cmake.in  package.xml
traversability_mapping_common/include/traversability_mapping_common/: type_conversion.hpp
traversability_mapping_common/src/: main.cpp  type_conversion.cpp
traversability_mapping_ros/: CMakeLists.txt  package.xml
traversability_mapping_ros/traversability_msgs/msg/: KeyFrameAdditions.msg
traversability_msgs/: CMakeLists.txt  package.xml
traversability_msgs/msg/: KeyFrame.msg
traversability_ros_interface/ground_truth_kfs/: CMakeLists.txt  package.xml
traversability_ros_interface/ground_truth_kfs/src/: slam_keyframe_pcl_simulator.cpp  slam_keyframe_simulator.cpp
traversability_ros_interface/traversability_mapping_ros/: CMakeLists.txt  package.xml
traversability_ros_interface/traversability_mapping_ros/launch/: global_gt_traversability_mapping.launch.py  global_slam_traversability_mapping.launch.py  global_traversability_mapping.launch.py  local_traversability_mapping.launch.py  multirobot_traversability.launch.py  one_shot_traversability_mapping.launch.py  rviz.launch.py
traversability_ros_interface/traversability_mapping_ros/params/: traversability_gt_ros_params.yaml  traversability_one_shot_params.yaml  traversability_ros_params.yaml  traversability_slam_ros_params.yaml
traversability_ros_interface/traversability_mapping_ros/rviz/: traversability.rviz
traversability_ros_interface/traversability_mapping_ros/src/: common.hpp  local_traversability.cpp  multi_map_merge.cpp  one_shot_traversability.cpp  threshold_occupancy.cpp  traversability_node.cpp  virtual_boundary_maker.cpp
traversability_ros_interface/traversability_msgs/: CMakeLists.txt  package.xml
traversability_ros_interface/traversability_msgs/msg/: KeyFrame.msg
traversability_ros_interface/traversability_msgs/srv/: GetGlobalPointcloud.srv
