<?xml version="1.0"?>
<package format="3">
  <name>traversability_mapping_common</name>
  <version>1.0.0</version>
  <description>
    Common utilities for traversability mapping (type conversions, etc.).
  </description>

  <maintainer email="rssuchetan@gmail.com">Suchetan Saravanan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- core dependencies -->
  <depend>Sophus</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>