<?xml version="1.0"?>
<package format="2">
  <name>traversability_mapping_ros</name>
  <version>0.0.1</version>
  <description>ROS 2 package for traversability mapping</description>
  <maintainer email="rssuchetan@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>traversability_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>traversability_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>